# wfc3d

./: Cargo.toml  LICENSE  README.md
assets/: cube.gltf  road.gltf  top.gltf
src/: collapser.rs  main.rs  objs.rs  tile_factory.rs  wfc.rs
