[package]
name = "wfc3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_panorbit_camera = "0.19.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
